
**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 2.2.4                               *
*	LAST UPDATE: Oct 5 2016                      *
*                                                *
**************************************************

Update: October 4th 2016
==================================================
->Adding event unpacking/decoding and reconstruction classes from amoreSRS
->The Run Config file field of "Ana_Reco_Clusters" is renamed to "Reco_All"
->QualityControl::Uniformity::RunSetup::bAnaStep_Reco renamed to bRecoStep_All
->Minor bug fixes to SRSMapping methods: GetPlaneOrientation(), GetNbOfAPVs(), GetSizeOfPlane(), and GetPlaneIDorEtaSector()
->Minor bug fixes to SRSOutputROOT::WriteRootFile() and SRSOutputROOT::InitRootFile()
->Renamed QualityControl::Uniformity::ParameterLoaderAmoreSRS to ParameterLoaderDetector
->Added new struct QualityControl::Uniformity::RunModes to include/QualityControlSectionNames.h
->QualityControlUniformity::ParameterLoaderRun now determines the possible running modes {Ana, Comp, Reco, RecoPlusAna} and stores them using RunModes
->SRSOutputROOT will no longer create a TBranch called etaSector in either THit or TCluster
->SRSOutputROOT will now store the planeID TBranch as type float in both THit and TCluster
->Standalone reconstruction mode is now implemented

Update: October 3rd 2016
==================================================
->Added new file include/QualityControlSectionNames.h for providing a single point of access for config file name headers
->Added new file include/PlotterUtilityTypes.h for defining plotting struct's DataPoint, InfoPlot, and InfoCanvas in the QualityControl::Plotter namespace

Update: September 30th 2016
==================================================